# PMChat

./: .gitignore  Production_Event_Log.csv  Production_Event_Log_v2.csv  README.md  running_example_manufacturing.csv  running_example_manufacturing_augmented.csv
pmchatbot/: .env  .env.template  README.md  chainlit.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  start_app.py  uploads
pmchatbot/.chainlit/: config.toml  custom.css  custom.js
pmchatbot/src/: app.py  chainlit_app.py  chat_handler.py  csv_processor.py  dfg_generator.py  dfg_relationships.csv  events.csv  main.py  test_graphrag.py  test_graphrag_casebased.py  test_graphrag_integrated.py  test_graphrag_intergrate_v2.py  test_graphrag_intergrate_v3.py  test_graphrag_intergrate_v4.py  test_graphrag_pathbased.py
pmchatbot/src/chainlit_integration/: __init__.py  interfaces.py  models.py
pmchatbot/src/chunking/: activity_chunker.py  process_chunker.py  variant_chunker.py
pmchatbot/src/config/: settings.py
pmchatbot/src/data/: data_compare.py  data_loader.py  data_processor.py  (+1 more)
pmchatbot/test_data_output/: basic_100.csv  basic_500.csv  complex_1000.csv  complex_500.csv  error_duplicates.csv  error_empty.csv  error_invalid_timestamps.csv  error_long_names.csv  error_missing_columns.csv  error_single_case.csv  metadata.json  performance_5000.csv  query_test_cases.json  session_scenarios.json  workflow_scenarios.json
pmchatbot/tests/: conftest.py  test_automation_pipeline.py  test_data_generator.py  test_integration_comprehensive.py  test_performance.py  test_requirements_validation.py
(+45 files in other folders)
